Test Org - Speridian/src/objects/BA_Classes__c.object
<CustomObject>
    <fields>
        <fullName>Enrollable_Class__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollable Class</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>just added for easy implementation of Ba_EnrollableClassSelctionLstCmp component in group installation flow</description>
        <label>Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ba_ClassDescription__c</fullName>
        <label>Class Description</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ba_ClassStatus__c</fullName>
        <label>Class Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Group Classes</relationshipLabel>
        <relationshipName>Group_Classes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ba_ProbationaryPeriod__c</fullName>
        <label>Probationary Period</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FOMF 60 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF 90 Days</fullName>
                </value>
                <value>
                    <fullName>FOMF DOH</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ba_TerminationDate__c</fullName>
        <label>Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ba_Waive_Probationary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waive Probationary Period For Open Enrol</label>
        <type>Checkbox</type>
    </fields>
    <label>Group Classes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Class ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Group Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>